# nonebot-plugin-multimodal-gemini

./: README.md  pyproject.toml
nonbot-plugin-multimodal-gemini/: __init__.py  config.py
nonebot-plugin-multimodal-gemini/: __init__.py  config.py  utils.py
